# Learning

./: .gitignore
Assembly/: build.bat  calculating.asm  helloworld  helloworld.asm
C++/: CMakeLists.txt  CMakePresets.json
C++/include/: Print.H
C++/src/: Print.cpp  main.cpp
Coding Interview/: Anagram.py  BackTracking.py  BinarySearch.py  BreadthFirstSearch.py  DepthFirstSearch.py  FastSlowPointer.py  First and Last Index in sorted array.py  HouseRobberFibbonacciDP.py  Longest Common Prefix.py  Palindrome Number.py  PrefixAndSuffixProduce.py  Remove A Linked List Element.py  Roman To Interger.py  SlidingWindow.py  TopologySort.py  Two Sum.py  UnionFind.py  Valid Palindrome 2.py  ValidPalindrome.py  test.py
HTML/Docker/src/: index.js
HTML/Introduction/: about.html  index.html
HTML/Introduction/style/: button.css
HTML/Portfolio/: about.html  contact.html  experience.html  index.html  portfolio.html  skill.html  squeeze.html
HTML/Portfolio/script/: HeroScreen.js  Sidebar.js  SkillScreen.js  script.js
HTML/Portfolio/style/: General.css  Header.css  Sidebar.css  Theme.css  about.css  experience.css  portfolio.css  skill.css  squeeze-experience.css
HTML/Search HTML/: SearchBox.html
HTML/Search HTML/style/: Searchbox.css
HTML/Youtube HTML/: Dockerfile  youtube.html
HTML/Youtube HTML/resources/: Thumbnail 1.avif  Thumbnail 2.avif  (+4 more)
Kaku/: CMakeLists.txt  Script.txt  main  main.c
Ruby/UDP/: ethernetFrame.rb  internetInterface.rb  ippacket.rb  server.rb  socketaddress.rb  udp.rb  udpdatagram.rb
TextEditor/: CMakeLists.txt  main  main.c
(+6 files in other folders)
